# craytracer

./: meson.build
.github/workflows/: meson.yml
include/: meson.build
include/color/: color.h  meson.build
include/hittable/: consts.h  hittable.h  hittable_list.h  meson.build
include/ray/: meson.build  ray.h
include/utils/: camera.h  meson.build  utils.h
include/vec3/: meson.build  vec3.h
src/: main.c  meson.build
